big fixes, fix spacing issues on parking page

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,5 @@
 body {
-	font-family: 'Roboto Mono', monospace;
+	font-family: monospace;
 	font-weight: 300;
 }
 
